# orm-alchemy

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE
cmake/: apply_options.cmake  declare_and_apply_options.cmake  target_add_pkgconfig.cmake
